--- a/templates/planos_renovacao.html
+++ b/templates/planos_renovacao.html
@@ -55,8 +55,30 @@
         <p>✔Relatórios financeiros</p>
         
 
-        <h3>R$ 1,00</h3>
+        <h3>R$ 35,00</h3>
         <a href="/renovar/mensal">Assinar</a>
+    </div>
+    <div class="card">
+        <h3>Plano Trimestral</h3>
+        <p>✔acesso ilimitado</p>
+        <p>✔Gestão de agendamentos</p>
+        <p>✔Controle de clientes</p>
+        <p>✔usuarios ilimitados</p>
+        <p>✔Controle de serviços</p>
+        <p>✔Relatórios financeiros</p>
+        <h3>R$ 85,00</h3>
+        <a href="/renovar/trimestral">Assinar</a>
+    </div>
+    <div class="card">
+        <h3>Plano Anual</h3>
+        <p>✔acesso ilimitado</p>
+        <p>✔Gestão de agendamentos</p>
+        <p>✔Controle de clientes</p>
+        <p>✔usuarios ilimitados</p>
+        <p>✔Controle de serviços</p>
+        <p>✔Relatórios financeiros</p>
+        <h3>R$ 125,00</h3>
+        <a href="/renovar/anual">Assinar</a>
     </div>
 </body>
 </html>
