--- a/templates/login.html
+++ b/templates/login.html
@@ -50,14 +50,8 @@
             </div>
           
             <div class="mb-3">
-              <label for="empresa" class="form-label">Nome da Empresa</label>
-              <input type="text" id="empresa" name="empresa" class="form-control" required
-                placeholder="Digite o nome da empresa">
-            </div>
-            <div class="mb-3">
-              <label for="usuario" class="form-label">Usuário</label>
-              <input type="text" id="usuario" name="usuario" class="form-control" required
-                placeholder="Digite o nome do usuário">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" id="email" name="email" class="form-control" required placeholder="Digite o email">
             </div>
             <div class="mb-3">
               <label for="senha" class="form-label">Senha</label>
