--- a/templates/payment.html
+++ b/templates/payment.html
@@ -55,10 +55,10 @@
         <p>✔Relatórios financeiros</p>
         
 
-        <h3>R$ 1,00</h3>
+        <h3>R$ 35,00</h3>
         <a href="/adquirir/mensal">Assinar</a>
     </div>
-    <!-- <div class="card">
+    <div class="card">
         <h3>Plano Trimestral</h3>
         <p>✔acesso ilimitado</p>
         <p>✔Gestão de agendamentos</p>
@@ -66,7 +66,7 @@
         <p>✔usuarios ilimitados</p>
         <p>✔Controle de serviços</p>
         <p>✔Relatórios financeiros</p>
-        <h3>R$ 3,00</h3>
+        <h3>R$ 85,00</h3>
         <a href="/adquirir/trimestral">Assinar</a>
     </div>
     <div class="card">
@@ -77,9 +77,10 @@
         <p>✔usuarios ilimitados</p>
         <p>✔Controle de serviços</p>
         <p>✔Relatórios financeiros</p>
-        <h3>R$ 12,00</h3>
+        <h3>R$ 125,00</h3>
         <a href="/adquirir/anual">Assinar</a>
-    </div> -->
+    </div> 
+
     <div class="card">
         <h3>Teste Gratuito 30 dias</h3>
         <p>✔acesso ilimitado</p>
