--- a/templates/base.html
+++ b/templates/base.html
@@ -9,25 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- CSS Personalizado -->
-    <link rel="stylesheet" href="/static/style.css">
-    
-   
+    <link rel="stylesheet" href="/static/styles/style.css">
+    <link rel="stylesheet" href="/static/styles/users.css">
+    <link rel="icon" href="/static/img/logo fav icon.png" type="image/png">
 </head>
 
 <body>
+    <div>
+    <button id="toggle-menu" class="d-block d-md-none"
+        style="background-color: transparent; border: none; font-size: 2rem; color: black; ;">
+        ☰
+    </button>
+</div>
     <div class="d-flex">
+        
         <!-- Menu Lateral -->
         <div id="menu-container"></div>
         <!-- Conteúdo Principal -->
         <div class="container mt-4">
-         </div>
-            
+            <div id="loading">Carregando...</div>
+         
+     
     </div>
-
-    <script src="static/menu.js"></script>
+    <script src="static/scripts/menu.js"></script>
     <script>
         renderMenu('menu-container');
+      
     </script>
+
+    
+
 </body>
 
 </html>
