--- a/templates/pdv.html
+++ b/templates/pdv.html
@@ -433,7 +433,7 @@
                 const result = await response.json();
 
                 if (response.ok) {
-                    alert('Venda realizada com sucesso!');
+                    window.location.reload();
                     produtos = [];
                     atualizarTabelaProdutos();
                     document.getElementById('observacao').value = '';
